welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:7: error: value lenght is not a member of Array[java.awt.Color]
	for (i <- 0 to tab.lenght - 1) {
                           ^